--- a/web/src/components/kksk2/Days.scss
+++ b/web/src/components/kksk2/Days.scss
@@ -45,10 +45,13 @@
     // padding: .5rem;
     font-family: $fontDINM;
     background-color: rgba(black, 0.4);
+    &:last-child {
+      border-bottom: 0 none;
+    }
 
     @include genResponsiveColGrids(
-      2fr 4fr 4fr,
-      2fr 4fr 4fr
+      2fr 5fr 5.5fr,
+      2fr 5fr 5.5fr
     );
 
     .startTime {
@@ -64,7 +67,7 @@
         background-repeat: no-repeat;
         pointer-events: none;
         opacity: 0.382;
-        background-color: rgba(white, 0.1);
+        background-color: rgba(black, 0.618);
       }
 
       .from, .to {
