--- a/web/src/pages/kksk2/live-layouts/live.scss
+++ b/web/src/pages/kksk2/live-layouts/live.scss
@@ -2,35 +2,32 @@
 
 $borderC: lighten($ctna, 20%);
 
-@keyframes GameName {
-  0% { transform: scale(1) }
-  50% { transform: scale(1.5) }
-  100% { transform: scale(1) }
-}
-
-@mixin boxBase {
-  position: absolute;
-
+@mixin fontBase {
   display: flex;
   font-family: $fontDIN;
   justify-content: center;
   align-items: center;
   color: white;
   font-size: 2rem;
+}
+
+@mixin boxBase {
+  @include fontBase;
+  position: absolute;
   box-sizing: border-box;
 }
 
-@mixin box ($color: $borderC) {
+@mixin box ($color: $kksk2C1) {
   @include boxBase;
   // border: solid 5px $color;
   background-color: rgba(black, 1);
-  &:after {
+  &:before {
     content: '';
     position: absolute;
     width: 100%; height: 100%;
     border: solid 5px $color;
     background-color: rgba(darken($color, 30%), 0.3);
-    // z-index: 0;
+    z-index: -1;
   }
   span {
     position: relative;
@@ -96,9 +93,32 @@ $halfibpd: $ibpd / 2;
   overflow: hidden;
 }
 
+@mixin stage {
+  position: absolute;
+  top: 0; left: 0;
+  width: 1620px; height: 1080px;
+  background-color: rgba($ctna, 0.2);
+  overflow: hidden;
+}
+
+@mixin titleShadow ($color) {
+  text-shadow: 6px 6px 0 rgba(black, 0.382);
+  color: $color;
+  font-family: $fontDINM;
+}
+
+@keyframes stafff {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-100%);
+  }
+}
+
 .live {
   position: fixed;
-  // overflow: scroll;
   overflow: hidden;
   top: 0; width: 100%;
   left: 0; height: 100%;
@@ -119,239 +139,310 @@ $halfibpd: $ibpd / 2;
 
   .c-16-9-single {
     @include screen;
+    $bd: 5px;
+    $halfbd: 2.5px;
+    $vw: 1600px; $vh: 900px;
 
-    // 游戏画面
     .video {
       top: 0px; right: 0px;
-      width: 1601px; height: 901px;
+      width: $vw; height: $vh;
       @include box;
-      border-top: 0 none;
-      border-right: 0 none;
-      // background-color: rgba($ctna, 0.2);
     }
-    // tna
-    .logo {
-      top: 0; left: 0;
-      // width: 319px; height: 360px;
-      width: 319px - $ibpd; height: 360px - $halfibpd;
-      @include box;
-      border-left: 0 none;
-      border-top: 0 none;
-    }
-    // 恰饭
-    .ad {
-      bottom: 0; left: 0;
-      // width: 319px; height: 720px;
-      width: 319px - $ibpd; height: 720px - $halfibpd;
-      @include box;
-      border-left: 0 none;
-      border-bottom: 0 none;
-      .adi {
-        position: absolute;
-        top: 0; left: 0; right: 0; bottom: 0;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        .adii {
-          position: relative;
-          &:first-child {
-            border-bottom: 1px solid $borderC;
-          }
-        }
+
+    .lattrs {
+      width: 1920px - $vw - $bd; height: 900px + $bd;
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+
+      .pv1 {
+        @include fontBase;
+        border-bottom: solid $bd $kksk2C1;
+      }
+      .logo {
+        border-bottom: solid $bd $kksk2C1;
       }
     }
 
-    // 游戏信息
-    .game {
-      right: 0; bottom: 0;
-      // width: 800px; height: 179px;
-      width: 800px - $halfibpd; height: 179px - $ibpd;
+    .battrs {
+      position: absolute;
+      bottom: 0; right: 0;
+      width: $vw + $bd; height: 1080px - $vh - $bd;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+
+      .game, .timer {
+        border-left: solid $bd $kksk2C1;
+      }
+    }
+  }
+
+  .c-16-9-single-stage {
+    @include stage;
+    $bd: 5px;
+    $halfbd: 2.5px;
+    $vw: 1600px; $vh: 900px;
+
+    .video {
+      top: 0px; left: 10px;
+      width: $vw; height: $vh;
       @include box;
-      border-bottom: 0 none;
-      border-right: 0 none;
     }
 
-    // 计时器和 runner
-    .timer {
-      left: 320px - 1px; bottom: 0;
-      // width: 801px; height: 179px;
-      width: 801px - $halfibpd; height: 179px - $ibpd;
-      @include box;
-      border-bottom: 0 none;
+    .battrs {
+      position: absolute;
+      bottom: 0; left: 5px;
+      width: $vw + $bd * 2; height: 1080px - $vh - $bd;
+      display: grid;
+      grid-template-columns: 1fr 1fr 2fr 2fr;
+
+      .pv1 {
+        border-left: solid $bd $kksk2C1;
+        @include fontBase;
+        background-color: rgba(black, 0.382);
+      }
+      .logo {
+        border-left: solid $bd $kksk2C1;
+      }
+      .game, .timer {
+        border-left: solid $bd $kksk2C1;
+      }
+      .game {
+        border-right: solid $bd $kksk2C1;
+      }
     }
   }
 
   .c-4-3-single {
     @include screen;
+    $bd: 5px; $hbd: 2.5px;
+    $vw: 1440px; $vh: 1080px;
 
     .video {
       top: 0px; right: 0;
-      width: 1441px; height: 1081px;
+      width: $vw; height: $vh;
       @include box;
-      border-top: 0 none;
-      border-right: 0 none;
-      border-bottom: 0 none;
-      // background-color: rgba($ctna, 0.2);
     }
-    .logo {
+    .attrs {
       top: 0; left: 0;
-      // width: 479px; height: 360px;
-      width: 479px - $ibpd; height: 300px - $halfibpd;
-      @include box;
-      border-left: 0 none;
-      border-top: 0 none;
-    }
-    .ad {
-      top: 300px + $halfibpd; left: 0;
-      // width: 479px; height: 360px;
-      width: 479px - $ibpd; height: 300px - $ibpd;
-      @include box;
-      border-left: 0 none;
-    }
-    .game {
-      top: 360px + 240px + $halfibpd; left: 0;
-      // width: 479px; height: 360px;
-      width: 479px - $ibpd; height: 240px - $ibpd;
-      @include box;
-      border-left: 0 none;
-    }
-    .timer {
-      bottom: 0; left: 0;
-      // width: 479px; height: 360px;
-      width: 479px - $ibpd; height: 240px - $halfibpd;
-      @include box;
-      border-bottom: 0 none;
-      border-left: 0 none;
+      width: 1920px - $vw - $bd;
+      height: 1080px;
+      display: grid;
+      grid-template-rows: 4fr 2fr 3fr 3fr;
+
+      .pv1 {
+        @include fontBase;
+        border-bottom: solid $bd $kksk2C1;
+        background-color: rgba(black, 0.382);
+      }
+      .logo {
+        border-bottom: solid $bd $kksk2C1;
+      }
+      .game {
+        border-bottom: solid $bd $kksk2C1;
+      }
     }
   }
 
-  .c-16-9-race-1 {
-    @include screen;
+  .c-4-3-single-stage {
+    @include stage;
+    $bd: 5px;
+    $halfbd: 2.5px;
+    $vw: 1200px; $vh: 900px;
 
-    .video1 {
-      top: 0; left: 0;
-      // width: 960px; height: 540px;
-      width: 960px; height: 541px;
+    .video {
+      top: 0px; left: 0;
+      width: $vw; height: $vh;
       @include box;
-      border-left: 0 none; border-top: 0 none;
-      // background-color: rgba($ctna, 0.2);
     }
-    .video2 {
+
+    .rattrs {
+      position: absolute;
       top: 0; right: 0;
-      // width: 960px; height: 540px;
-      width: 960px; height: 541px;
-      @include box;
-      border-right: 0 none; border-top: 0 none;
-      // background-color: rgba($ctna, 0.2);
+      width: 1620px - $vw; height: $vh;
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      // z-index: 100;
+      .pv1 {
+        @include fontBase;
+        border-bottom: solid $bd $kksk2C2;
+        background-color: rgba(black, 0.382);
+      }
     }
-    .logo {
+
+    .battrs {
+      position: absolute;
       bottom: 0; left: 0;
-      // width: 640px; height: 360px;
-      width: 640px - $halfibpd; height: 450px;
-      @include box;
-      border-left: 0 none; border-bottom: 0 none;
-    }
-    .ad {
-      bottom: 0; right: 0;
-      // width: 640px; height: 360px;
-      width: 640px - $halfibpd; height: 450px;
-      @include box;
-      border-right: 0 none; border-bottom: 0 none;
-    }
-    .game {
-      bottom: 0; left: 640px + $halfibpd;
-      // width: 640px; height: 360px;
-      width: 640px - $ibpd; height: 450px;
-      @include box;
-      border-bottom: 0 none;
-    }
-    .raceplayers {
-      top: 541px; left: 0;
-      // width: 1920px; height: 89px;
-      width: 1920px; height: 89px - $ibpd;
-      @include box;
-      border-left: 0 none; border-right: 0 none; border-top: 0 none;
+      width: 1620px; height: 1080px - $vh - $bd;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      border-top: solid $bd $kksk2C1;
+
+      .game, .timer {
+        // border-left: solid $bd $kksk2C1;
+      }
+      .game {
+        border-left: solid $bd $kksk2C1;
+        // border-right: solid $bd $kksk2C1;
+      }
     }
   }
 
-  .c-16-9-race-2 {
+  .c-16-9-race {
     @include screen;
+    $vw: 960px; $vh: 540px;
+    $bd: 5px;
+    $hbd: 2.5px;
 
     .video1 {
       top: 0; left: 0;
-      // width: 960px; height: 540px;
-      width: 960px; height: 541px;
+      width: $vw; height: $vh;
       @include box;
-      border-left: 0 none; border-top: 0 none;
-      // background-color: rgba($ctna, 0.2);
+      &:before { border: solid 0px transparent; }
     }
     .video2 {
       top: 0; right: 0;
-      // width: 960px; height: 540px;
-      width: 960px; height: 541px;
+      width: $vw; height: $vh;
       @include box;
-      border-right: 0 none; border-top: 0 none;
-      // background-color: rgba($ctna, 0.2);
+      &:before { border: solid 0px transparent; }
     }
+    .attrs {
+      position: absolute;
+      left: 0; bottom: 0;
+      width: 1920px; height: 1080px - $vh;
+      display: grid;
+      grid-template-rows: 1fr 3fr;
 
-    .raceplayers {
-      top: 541px; left: 0;
-      // width: 1920px; height: 89px;
-      width: 1920px; height: 89px;
-      @include box;
-      border-left: 0 none; border-right: 0 none; border-top: 0 none;
-    }
+      .raceplayers {
+        border-top: solid $bd $kksk2C1;
+      }
 
-    .st1 {
-      left: 0; top: 630px;
-      width: 735px;
-      height: 230px;
-      @include box;
-      border-left: 0 none; border-top: 0 none; border-right: 0 none;
-      background-color: black;
-    }
-    .st2 {
-      right: 0; top: 630px;
-      width: 735px;
-      height: 230px;
-      @include box;
-      border-right: 0 none; border-top: 0 none; border-left: 0 none;
-      background-color: black;
-    }
+      .battrs {
+        display: grid;
+        grid-template-columns: 3fr 1fr 4fr 1fr 3fr;
+        border-top: solid $bd $kksk2C1;
 
-    .bingo {
-      $w: 450px;
-      width: $w; height: $w;
-      left: (1920px - $w) / 2; bottom: 0; 
-      @include box;
-      border-bottom: 0 none;
-      background-color: black;
-      border-top: 0 none;
-      border-left: 0 none;
-      border-right: 0 none;
+        .pv1, .pv2 {
+          @include fontBase;
+          background-color: rgba(black, 0.382);
+        }
+        .logo {
+          border-left: solid $bd $kksk2C1;
+          border-right: solid $bd $kksk2C1;
+        }
+        .others {
+          border-left: solid $bd $kksk2C1;
+        }
+      }
     }
-    
-    .logo {
+  }
+
+  .c-16-9-race-stage {
+    @include stage;
+    $vw: 880px; $vh: 495px;
+    $bd: 5px;
+    $hbd: 2.5px;
+
+    .video1 {
+      top: 0; left: 0;
+      width: $vw; height: $vh;
+      @include box;
+    }
+    .video2 {
       bottom: 0; right: 0;
-      width: 364px; height: 214px;
+      width: $vw; height: $vh;
       @include box;
-      border-bottom: 0 none;
+    }
+    .pv1, .pv2 {
+      @include box;
+      width: 370px; height: $vh + $bd - 90px;
+      border: solid $bd $kksk2C2;
+      &:before { border: solid 0px transparent; }
+    }
+    .pv1 {
+      left: 880px; top: 90px;
+    }
+    .pv2 {
+      right: 880px; bottom: 90px;
+    }
+
+    .p1name, .p2name {
+      width: 370px; height: 90px;
+      @include box;
+      border: solid $bd $kksk2C2;
+      &:before { border: solid 0px transparent; }
+    }
+    .p1name {
+      left: 880px; top: 0;
+    }
+    .p2name {
+      right: 880px; bottom: 0;
+    }
+
+    .info {
+      position: absolute;
+      border: solid $bd $kksk2C1;
+      border-left: 0 none;
       border-right: 0 none;
-      border-left: 0 none;
+      &:before { border: solid 0px transparent; }
+      left: 0; top: 495px; right: 0; height: 90px;
+      box-sizing: border-box;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      z-index: 100;
+      .name {
+        @include fontBase;
+      }
+      .timer {
+        border-left: solid $bd $kksk2C1;
+        border-right: solid $bd $kksk2C1;
+      }
+      .category {
+        @include fontBase;
+      }
     }
-    .ad {
-      bottom: 0; right: 364px;
-      width: 364px; height: 214px;
+
+    .timer1, .timer2 {
+      opacity: 0;
       @include box;
-      border-bottom: 0 none;
+      width: 370px; height: 90px;
+      border: solid $bd $kksk2C2;
+      &:before { border: solid 0px transparent; }
     }
-    .game {
-      bottom: 0; left: 0;
-      width: 729px; height: 214px;
-      @include box;
-      border-bottom: 0 none;
-      border-left: 0 none;
+    .timer1 {
+      right: 0; top: $vh + $bd - 90px;
     }
+    .timer2 {
+      left: 0; bottom: $vh + $bd - 90px;
+    }
+
+    // .attrs {
+    //   position: absolute;
+    //   right: 0; bottom: 0;
+    //   width: 660px; height: 1080px;
+    //   display: grid;
+    //   grid-template-rows: 1fr 6fr 1fr 1.5fr;
+
+    //   .timer {
+    //     border-top: solid $bd $kksk2C1;
+    //     border-left: solid $bd $kksk2C1;
+    //   }
+
+    //   .battrs {
+    //     display: grid;
+    //     grid-template-rows: 1fr 1fr;
+    //     border-left: solid $bd $kksk2C1;
+        
+    //     .logo {
+    //       border-top: solid $bd $kksk2C1;
+    //     }
+    //     .game {
+    //       border-top: solid $bd $kksk2C1;
+    //     }
+    //     .others {
+    //       border-top: solid $bd $kksk2C1;
+    //     }
+    //   }
+    // }
   }
 
   .c-16-9-race-4p {
@@ -721,6 +812,103 @@ $halfibpd: $ibpd / 2;
       // @include light-title;
       color: $text-color;
       color: lighten($ctna, 10%);
+    }
+  }
+
+  .c-end {
+    @include screen;
+    $bd: 5px;
+  
+    .gtitle {
+      height: 180px; left: 0; right: 0; top: 0;
+      @include box;
+      h1 {
+        font-size: 2.5rem;
+      }
+    }
+  
+    .battrs {
+      position: absolute;
+      top: 180px; left: 0; right: 0; bottom: 0;
+      display: grid;
+      grid-template-columns: 1fr 3fr 1fr;
+
+      .staff {
+        border-left: solid $bd $kksk2C1;
+        border-right: solid $bd $kksk2C1;
+        font-family: $fontDIN;
+        overflow: hidden;
+        background-color: rgba(black, 0.618);
+
+        .list {
+          animation: stafff 120s linear infinite;
+          // background-color: red;
+        }
+
+        .block {
+          text-align: center;
+          margin-bottom: 2rem;
+          padding-top: 2rem;
+          font-size: 1.5rem;
+          font-weight: bold;
+          color: white;
+
+          h2 {
+            font-size: 2.5rem;
+            margin: 0;
+            margin-bottom: 2rem;
+            color: lighten($kksk2C1, 20%);
+          }
+          span {
+            display: block;
+            font-size: 1.5rem;
+            margin-bottom: 0.5rem;
+            opacity: 0.618;
+          }
+          div {
+            font-size: 2rem;
+            margin-bottom: 2.5rem;
+            &.p {
+              margin-bottom: 1rem;
+            }
+          }
+        }
+        .head {
+          height: 50rem;
+        }
+        .tail {
+          height: 50rem;
+        }
+      }
+
+      .logos1, .logos2 {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        background-color: rgba(black, 0.382);
+        .Logo {
+          display: grid;
+          grid-template-rows: 3fr 1fr 0.5fr;
+
+          .i {
+            margin: 0rem;
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+          }
+          .t {
+            @include fontBase;
+          }
+        }
+      }
+      .logos1 {
+        padding-top: 4rem;
+        .Logo {
+          transform: translateY(6rem);
+        }
+      }
+      .logos2 {
+        padding-top: 4rem;
+      }
     }
   }
 }
