--- a/web/src/pages/document.ejs
+++ b/web/src/pages/document.ejs
@@ -11,9 +11,9 @@
 <body>
   <div id="root"></div>
 
-  <div style='display:none;'>
+  <!-- <div style='display:none;'>
   <script type="text/javascript" src="//s5.cnzz.com/z_stat.php?id=1276809085&web_id=1276809085"></script>
-  </div>
+  </div> -->
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.3.0/alt/video.core.min.js"></script>
 
