--- a/web/src/pages/kksk2/live-layouts/live.scss
+++ b/web/src/pages/kksk2/live-layouts/live.scss
@@ -164,6 +164,15 @@ $halfibpd: $ibpd / 2;
         background-color: rgba(black, 0.382);
       }
     }
+
+    .qr {
+      position: absolute;
+      left: 0; bottom: 0;
+      width: 310px; height: 170px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   .c-4-3-single {
@@ -729,7 +738,7 @@ $halfibpd: $ibpd / 2;
 
       .sbr {
         display: grid;
-        grid-template-rows: 2fr 1fr 0.5fr;
+        grid-template-rows: 380px 1fr 1fr;
         font-size: 2rem;
         @include titleShadow(white);
         padding-top: 1rem;
@@ -740,13 +749,115 @@ $halfibpd: $ibpd / 2;
           align-items: center;
           text-align: center;
           background-color: rgba(black, 0.382);
-          padding: 1rem 0;
-          img { width: 12rem; height: 12rem; margin-top: 1rem;}
+          // padding: 1rem 0;
+          img { width: 15rem; height: 15rem; margin-top: 1rem;}
         }
       }
       .countdown {
         background-color: rgba(black, 0.382);
         padding: 1rem 0;
+      }
+    }
+  }
+
+  .c-mhnxns {
+    @include screen;
+    $bd: 5px;
+  
+    .gtitle {
+      height: 120px; left: 0; right: 0; top: 0;
+      @include boxBase;
+      border-bottom: solid $bd $corange;
+      @include titleShadow(white);
+      font-size: 2.5rem;
+    }
+
+    .logo {
+      @include boxBase;
+      width: 120px; height: 120px;
+      top: 0; left: 400px;
+      z-index: 100;
+    }
+  
+    .battrs {
+      position: absolute;
+      top: 120px; left: 0; right: 0; bottom: 0;
+      display: grid;
+      grid-template-columns: 1fr;
+
+      .staff {
+        border-left: solid $bd $kksk2C1;
+        border-right: solid $bd $kksk2C2;
+        font-family: $fontDIN;
+        overflow: hidden;
+        background-color: rgba(black, 0.618);
+        // overflow: scroll;
+
+        .list {
+          text-shadow: 6px 6px 0 rgba(black, 0.382);
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          padding: 0 10rem;
+        }
+
+        .block {
+          text-align: center;
+          margin-bottom: 2rem;
+          padding-top: 2rem;
+          font-size: 1.5rem;
+          font-weight: bold;
+          color: white;
+
+          h2 {
+            font-size: 2.5rem;
+            margin: 0;
+            margin-bottom: 2rem;
+            color: lighten($kksk2C1, 20%);
+          }
+          span {
+            display: block;
+            font-size: 2.4rem;
+            margin-bottom: 0.5rem;
+            opacity: 0.618;
+          }
+          div {
+            font-size: 2rem;
+            margin-bottom: 2.5rem;
+            &.p {
+              margin-bottom: 1rem;
+            }
+          }
+        }
+      }
+
+      .logos1, .logos2 {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        .Logo {
+          display: grid;
+          grid-template-rows: 3fr 1fr 0.5fr;
+
+          .i {
+            margin: 0rem;
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+          }
+          .t {
+            @include fontBase;
+          }
+        }
+      }
+      .logos1 {
+        padding-top: 4rem;
+        background-color: rgba(darken($kksk2C1, 30%), 0.382);
+        .Logo {
+          transform: translateY(6rem);
+        }
+      }
+      .logos2 {
+        background-color: rgba(darken($kksk2C2, 30%), 0.382);
+        padding-top: 4rem;
       }
     }
   }
