--- a/web/src/components/rit19/Season.scss
+++ b/web/src/components/rit19/Season.scss
@@ -2,7 +2,7 @@ $outerBorderColor: rgba(#d7ecff, 1);
 $borderColor: rgba(#d7ecff, 0.5);
 $lightbg: rgba(lighten(gold, 10%), 0.2);
 
-.RunnerRecords {
+@mixin table {
   border: solid 2px $outerBorderColor;
   box-shadow: 0 0 1rem #01b0ff;
   margin-bottom: 2rem;
@@ -10,6 +10,54 @@ $lightbg: rgba(lighten(gold, 10%), 0.2);
   // font-family: Arial, Helvetica, sans-serif;
   font-size: .9rem;
   color: #f1f1f1;
+}
+
+.brief {
+  @include table;
+
+  .head {
+    display: grid;
+    grid-template-columns: 10fr 2fr;
+    border-bottom: solid 1px $borderColor;
+    color: #01b0ff;
+    background-color: rgba(#01b0ff, 0.3);
+    span {
+      font-weight: bold;
+      padding: .5rem;
+      border-right: solid 1px $borderColor;
+      &:last-child {
+        border-right: 0 none;
+      }
+    }
+  }
+
+  .group {
+    display: grid;
+    grid-template-columns: 10fr 2fr;
+    border-bottom: solid 1px $borderColor;
+    &:last-child {
+      border-bottom: 0 none;
+    }
+    span {
+      padding: .5rem;
+      display: flex;
+      align-items: center;
+      &.name {
+        border-right: solid 1px $borderColor;
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
+      &.point {
+        font-size: 2rem;
+        font-weight: bold;
+        color: gold;
+      }
+    }
+  }
+}
+
+.RunnerRecords {
+  @include table;
 
   .head {
     display: grid;
