--- a/web/src/pages/ncovhelp/live-layouts/live.scss
+++ b/web/src/pages/ncovhelp/live-layouts/live.scss
@@ -61,6 +61,7 @@ $SCREENH: 1080px;
   top: 0; left: 0;
   @include redBox();
   @include boxTip();
+  background-color: black;
 
   .BackGround {
     @include box($w: $SCREENW, $h: $SCREENH);
@@ -88,6 +89,8 @@ $SCREENH: 1080px;
     @include box($w, $h, $l, $t);
     background: rgba(black, 0.3);
     @include innerTNA();
+    font-size: 2.5rem;
+    font-family: $fontDINM;
   }
 
   .Game {
@@ -96,6 +99,8 @@ $SCREENH: 1080px;
     @include box($w, $h, $l, $t);
     background: rgba(black, 0.3);
     @include innerTNA();
+    font-size: 2.5rem;
+    font-family: $fontDINM;
   }
 
   .Category {
@@ -104,6 +109,8 @@ $SCREENH: 1080px;
     @include box($w, $h, $l, $t);
     background: rgba(black, 0.3);
     @include innerTNA();
+    font-size: 2.5rem;
+    font-family: $fontDINM;
   }
 
   .Timer {
@@ -162,6 +169,7 @@ $SCREENH: 1080px;
   top: 0; left: 0;
   @include redBox();
   @include boxTip();
+  background-color: black;
 
   .BackGround {
     @include box($w: $SCREENW, $h: $SCREENH);
@@ -196,6 +204,8 @@ $SCREENH: 1080px;
     @include box($w, $h, $l, $t);
     background: rgba(white, 0.1);
     @include innerTNA();
+    font-size: 2.5rem;
+    font-family: $fontDINM;
   }
 
   .Game {
@@ -204,6 +214,8 @@ $SCREENH: 1080px;
     @include box($w, $h, $l, $t);
     background: rgba(black, 0.1);
     @include innerTNA();
+    font-size: 2.5rem;
+    font-family: $fontDINM;
   }
 
   .Category {
@@ -212,6 +224,8 @@ $SCREENH: 1080px;
     @include box($w, $h, $l, $t);
     background: rgba(white, 0.1);
     @include innerTNA();
+    font-size: 2.5rem;
+    font-family: $fontDINM;
   }
 
   .Timer {
