--- a/web/src/pages/ncovhelp/index.scss
+++ b/web/src/pages/ncovhelp/index.scss
@@ -23,6 +23,35 @@
       color: darken(red, 10%);
     }
   }
+  h3 {
+    font-size: 2rem;
+    text-align: center;
+    margin: 0.5rem;
+    font-family: $fontDINM;
+    a {
+      color: #8d6fe7;
+    }
+  }
+
+  .img {
+    text-align: center;
+  }
+
+  .desc {
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-weight: bold;
+    p {
+      margin: 0;
+      margin-bottom: .5rem;
+      font-family: $fontDINM;
+      span {
+        color: darken($ctna, 10%);
+        // color: darken(red, 10%);
+      }
+    }
+  }
 }
 
 .ShowList {
