--- a/web/src/layouts/_vars.scss
+++ b/web/src/layouts/_vars.scss
@@ -20,6 +20,7 @@ $cred: #ff752b;
 $ctna: #01b0ff;
 $ckksk: #db2d4c;
 $crit: darken(#fdb762, 10%);
+$cafdian: #b89bf1;
 
 $chuya: #f38c03;
 $cbili: #03b0ff;
