--- a/web/src/components/ncovhelp/Logo.scss
+++ b/web/src/components/ncovhelp/Logo.scss
@@ -35,6 +35,7 @@
   img {
     max-width: 100%; max-height: 100%;
     margin-top: 3rem;
+    margin-bottom: 3rem;
   }
 
   h2 {
@@ -45,5 +46,28 @@
     margin: 0;
     text-shadow: 0 0 1rem rgba($cafdian, 0.5);
     top: .5rem;
+  }
+}
+
+.SCount {
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  box-shadow: 0 0 0 2px rgba($cafdian, 0.5) inset;
+  padding: 1rem;
+
+  .imgcover {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    pointer-events: none;
+    opacity: 0.1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  img {
+    max-width: 100%; max-height: 100%;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
   }
 }
